--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,40 @@
-.App {
-  text-align: center;
+.body {
+  font-family: 'Shadows Into Light', cursive;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  min-height: 100vh;
+  background-image: url("./keys-background.jpg");
+}
+
+.header {
+  background-color: whitesmoke;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: flex;
+  flex-grow: 1;
+  padding: 8rem 4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+  background-color: whitesmoke;
+  border: black;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+}
+
+.files-dropzone {
+  background-color: green;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
